Fix crash when applying liquify transformation via Transform Mask

We must not access Qt containers in non-const manner in multithreaded
environment. Qt has lazy sharing routines, which are not thread safe.

BUG:417667